新增 rmi 控制